--- a/.github/workflows/itest.yml
+++ b/.github/workflows/itest.yml
@@ -17,5 +17,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Run tests
-      run: ./gradlew integrationTest
+      run: |
+        ./gradlew runIdeForUiTests -PideaVersion=2020.1 & 
+        ./gradlew integrationTest
 
