--- a/.github/workflows/itest.yml
+++ b/.github/workflows/itest.yml
@@ -18,6 +18,9 @@ jobs:
       run: chmod +x gradlew
     - name: Run tests
       run: |
+        sudo apt-get install xvfb
+        export DISPLAY=:99.0
+        Xvfb -ac :99 -screen 0 1920x1080x16 &
         ./gradlew runIdeForUiTests -PideaVersion=2020.1 & 
         ./gradlew integrationTest
 
