--- a/.github/workflows/itest.yml
+++ b/.github/workflows/itest.yml
@@ -18,5 +18,4 @@ jobs:
         export DISPLAY=:99.0
         Xvfb -ac :99 -screen 0 1920x1080x16 &
         ./gradlew runIdeForUiTests &
-        ./gradlew integrationTests
-
+        ./gradlew integrationTest
