--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,71 +5,11 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, actions ]
   pull_request:
     branches: [ master ]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - uses: actions/upload-artifact@v1
-      with:
-        name: linux-test-reports
-        path: build/reports
-      if: always()
-    - name: Run integration tests
-      run: |
-        dir=~/.java/.userPrefs/jetbrains/_\!\(\!\!cg\"p\!\(\}\!\}@\"j\!\(k\!\|w\"w\!\'8\!b\!\"p\!\':\!e@=\=
-        mkdir -p "$dir"
-        cp .github/workflows/prefs.xml $dir
-        mkdir -p ~/.local/share/JetBrains/consentOptions
-        cp .github/workflows/accepted ~/.local/share/JetBrains/consentOptions
-        export DISPLAY=:99.0
-        Xvfb -ac :99 -screen 0 1920x1080x16 &
-        ./gradlew runIdeForUiTests -PideaVersion=2020.2 &
-        ./gradlew integrationTest
-    - uses: actions/upload-artifact@v1
-      with:
-        name: ${{ runner.os }}-integration-test-reports
-        path: build/reports/tests/integrationTest
-      if: always()
-    - name: Archiving screenshots
-      uses: actions/upload-artifact@v2
-      with: 
-        name: screenshots
-        path: |
-          build/screenshots/*
-
-  build-macos:
-    runs-on: macos-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - uses: actions/upload-artifact@v1
-      with:
-        name: macos-test-reports
-        path: build/reports
-      if: success() || failure()
-
   build-windows:
     runs-on: windows-latest
 
@@ -81,11 +21,15 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - uses: actions/upload-artifact@v1
-      with:
-        name: windows-test-reports
-        path: build/reports
-      if: success() || failure()
+    - name: Run integration tests
+      run: |
+        $dir = "$env:USERPROFILE\AppData\Roaming\JetBrains\consentOptions"
+        mkdir -Path $dir
+        cp -Path .github/workflows/prefs.xml -Destination $dir
+        New-Item -Path HKCU:\Software\JavaSoft\Prefs\jetbrains\privacy_policy -Name accepted_version -Value "2.1"
+        Start-Process powershell .\.github\workflows\start-ide.ps1 -WorkingDirectory .
+        .\gradlew.bat integrationTests
+      shell: powershell
+
+    
 
