--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         cp -Path .github/workflows/prefs.xml -Destination $dir
         New-Item -Path HKCU:\Software\JavaSoft\Prefs\jetbrains\privacy_policy -Name accepted_version -Value "2.1" -Force
         Start-Process powershell .\.github\workflows\start-ide.ps1 -WorkingDirectory .
-        .\gradlew.bat integrationTests
+        .\gradlew.bat integrationTest
       shell: powershell
 
     
